Fixed SbomFileDetectorTest for Windows (#13070)